--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-TQGO1573\\SQLSERVERTAN;Initial Catalog=my-books-db;Integrated Security=True;Pooling=False; TrustServerCertificate=True;" // code: add TrustServerCertificate=True;
-  }  
+  },
+  "Jwt": {
+    "Key": "Adafc246-109d-4ac9-9aa1-eb689fad9357",
+    "Issuer": "https://localhost:7041", //my-books > properties> debug…
+    "Audience": "https://localhost:7041"
+  }
 }
